--- a/views/index.ejs
+++ b/views/index.ejs
@@ -389,7 +389,7 @@
 						<p>
 							SupCounter<span style="font-size: 9px;">&copy;</span> es una aplicación para la gestión administrativa de consumos procedentes de suministros externos o depósitos,
 							y de los resultados de los ensayos sobre aguas de pisicinas y vasos.
-							Su ámbito de aplicación es en todas aquellas instalaciones que consten de sistemas de distribución de agua, combustible o electricidad, y piscinas o depóstitos de aguas sujetos a análisis por normativa.
+							Su ámbito de aplicación es en todas aquellas instalaciones que consten de sistemas de distribución de agua, combustible o electricidad, y piscinas o depóstitos de agua sujetos a análisis por normativa.
 						</p>
 						<p>Permite obtener en tiempo inmediato los informes sobre consumos, generando avisos sobre posibles desvíos.</p>
 						<p>Genera los informes Siloé de cada vaso o pisicina sujetos a análisis por normativa, y ofrece la posibilidad de descargalos en el formato exigido por el Real Decreto 742/2013, de 27 de septiembre.</p>
