--- a/views/vasos/_form.ejs
+++ b/views/vasos/_form.ejs
@@ -204,18 +204,18 @@
                             <div class="col-md-3 col-sm-3">
                                 <div class="marco_item">
                                     <div class="form-group">
-                                        <div class="col-md-6 item_ensayo">
+                                        <div class="col-md-6 col-xs-4 item_ensayo">
                                             <label for="ph_max" class="control-label">ph Máximo:</label>
                                         </div>
-                                        <div class="col-md-6">
+                                        <div class="col-md-6 col-xs-8">
                                             <input type="number" class="form-control" id="ph_max" name="vaso[ph_max]" value="<%= vaso.ph_max.toFixed(2) %>" step="0.01"/>
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <div class="col-md-6 item_ensayo">
+                                        <div class="col-md-6 col-xs-4 item_ensayo">
                                             <label for="ph_min" class="control-label">ph Mínimo:</label>
                                         </div>
-                                        <div class="col-md-6">
+                                        <div class="col-md-6 col-xs-8">
                                             <input type="number" class="form-control" id="ph_min" name="vaso[ph_min]" value="<%= vaso.ph_min.toFixed(1) %>" step="0.01"/>
                                         </div>
                                     </div>
@@ -235,18 +235,18 @@
                             <div class="col-md-3 col-sm-3">
                                 <div class="marco_item">
                                     <div class="form-group">
-                                        <div class="col-md-6 item_ensayo">
+                                        <div class="col-md-6 col-xs-4 item_ensayo">
                                             <label for="temp_max" class="control-label">Temperatura Máxima:</label>
                                         </div>
-                                        <div class="col-md-6">
+                                        <div class="col-md-6 col-xs-8">
                                             <input type="number" class="form-control" id="temp_max" name="vaso[temp_max]" value="<%= vaso.temp_max.toFixed(2) %>" step="0.01"/>
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <div class="col-md-6 item_ensayo">
+                                        <div class="col-md-6 col-xs-4 item_ensayo">
                                             <label for="temp_min" class="control-label">Temperatura Mínima:</label>
                                         </div>
-                                        <div class="col-md-6">
+                                        <div class="col-md-6 col-xs-8">
                                             <input type="number" class="form-control" id="temp_min" name="vaso[temp_min]" value="<%= vaso.temp_min.toFixed(2) %>" step="0.01"/>
                                         </div>
                                     </div>
@@ -266,10 +266,10 @@
                             <div class="col-md-3 col-sm-3">
                                 <div class="marco_item">
                                     <div class="form-group">
-                                        <div class="col-md-6 item_ensayo">
+                                        <div class="col-md-6 col-xs-4 item_ensayo">
                                             <label for="turbidez_max" class="control-label">Turbidez Máxima:</label>
                                         </div>
-                                        <div class="col-md-6">
+                                        <div class="col-md-6 col-xs-8">
                                             <input type="number" class="form-control" id="turbidez_max" name="vaso[turbidez_max]" value="<%= vaso.turbidez_max.toFixed(2) %>" step="0.01"/>
                                         </div>
                                     </div>
@@ -289,10 +289,10 @@
                             <div class="col-md-3 col-sm-3">
                                 <div class="marco_item">
                                     <div class="form-group">
-                                        <div class="col-md-6 item_ensayo">
+                                        <div class="col-md-6 col-xs-4 item_ensayo">
                                             <label for="recirculacion" class="control-label">Recirculación:</label>
                                         </div>
-                                        <div class="col-md-6">
+                                        <div class="col-md-6 col-xs-8">
                                             <input type="number" class="form-control" id="recirculacion" name="vaso[recirculacion]" value="<%= vaso.recirculacion.toFixed(2) %>" step="0.1"/>
                                         </div>
                                     </div>
@@ -315,18 +315,18 @@
                             <div class="col-md-3 col-sm-3">
                                 <div class="marco_item">
                                     <div class="form-group">
-                                        <div class="col-md-6 item_ensayo">
+                                        <div class="col-md-6 col-xs-4 item_ensayo">
                                             <label for="redox_max" class="control-label">Redox Máximo:</label>
                                         </div>
-                                        <div class="col-md-6">
+                                        <div class="col-md-6 col-xs-8">
                                             <input type="number" class="form-control" id="redox_max" name="vaso[redox_max]" value="<%= vaso.redox_max.toFixed(2) %>" step="0.01"/>
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <div class="col-md-6 item_ensayo">
+                                        <div class="col-md-6 col-xs-4 item_ensayo">
                                             <label for="redox_min" class="control-label">Redox Mínimo:</label>
                                         </div>
-                                        <div class="col-md-6">
+                                        <div class="col-md-6 col-xs-8">
                                             <input type="number" class="form-control" id="redox_min" name="vaso[redox_min]" value="<%= vaso.redox_min.toFixed(2) %>" step="0.01"/>
                                         </div>
                                     </div>
@@ -366,18 +366,18 @@
                             <div class="col-md-3 col-sm-3">
                                 <div class="marco_item">
                                     <div class="form-group">
-                                        <div class="col-md-6 item_ensayo">
+                                        <div class="col-md-6 col-xs-4 item_ensayo">
                                             <label for="cloro_max" class="control-label">Cl Máximo:</label>
                                         </div>
-                                        <div class="col-md-6">
+                                        <div class="col-md-6 col-xs-8">
                                             <input type="number" class="form-control" id="cloro_max" name="vaso[cloro_max]" value="<%= vaso.cloro_max.toFixed(2) %>" step="0.01"/>
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <div class="col-md-6 item_ensayo">
+                                        <div class="col-md-6 col-xs-4 item_ensayo">
                                             <label for="cloro_min" class="control-label">Cl Mínimo:</label>
                                         </div>
-                                        <div class="col-md-6">
+                                        <div class="col-md-6 col-xs-8">
                                             <input type="number" class="form-control" id="cloro_min" name="vaso[cloro_min]" value="<%= vaso.cloro_min.toFixed(2) %>" step="0.01"/>
                                         </div>
                                     </div>
@@ -397,10 +397,10 @@
                             <div class="col-md-3 col-sm-3">
                                 <div class="marco_item">
                                     <div class="form-group">
-                                        <div class="col-md-6 item_ensayo">
+                                        <div class="col-md-6 col-xs-4 item_ensayo">
                                             <label for="cloro_combinado_max" class="control-label">Cl Combinado Máximo:</label>
                                         </div>
-                                        <div class="col-md-6">
+                                        <div class="col-md-6 col-xs-8">
                                             <input type="number" class="form-control" id="cloro_combinado_max" name="vaso[cloro_combinado_max]" value="<%= vaso.cloro_combinado_max.toFixed(2) %>" step="0.01"/>
                                         </div>
                                     </div>
@@ -420,18 +420,18 @@
                             <div class="col-md-3 col-sm-3">
                                 <div class="marco_item">
                                     <div class="form-group">
-                                        <div class="col-md-6 item_ensayo">
+                                        <div class="col-md-6 col-xs-4 item_ensayo">
                                             <label for="bromo_max" class="control-label">Br Máximo:</label>
                                         </div>
-                                        <div class="col-md-6">
+                                        <div class="col-md-6 col-xs-8">
                                             <input type="number" class="form-control" id="bromo_max" name="vaso[bromo_max]" value="<%= vaso.bromo_max.toFixed(2) %>" step="0.01"/>
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <div class="col-md-6 item_ensayo">
+                                        <div class="col-md-6 col-xs-4 item_ensayo">
                                             <label for="bromo_min" class="control-label">Br Mínimo:</label>
                                         </div>
-                                        <div class="col-md-6">
+                                        <div class="col-md-6 col-xs-8">
                                             <input type="number" class="form-control" id="bromo_min" name="vaso[bromo_min]" value="<%= vaso.bromo_min.toFixed(2) %>" step="0.01"/>
                                         </div>
                                     </div>
@@ -451,10 +451,10 @@
                             <div class="col-md-3 col-sm-3">
                                 <div class="marco_item">
                                     <div class="form-group">
-                                        <div class="col-md-6 item_ensayo">
+                                        <div class="col-md-6 col-xs-4 item_ensayo">
                                             <label for="isocianuro_max" class="control-label">Isocianuro Máximo:</label>
                                         </div>
-                                        <div class="col-md-6">
+                                        <div class="col-md-6 col-xs-8">
                                             <input type="number" class="form-control" id="isocianuro_max" name="vaso[isocianuro_max]" value="<%= vaso.isocianuro_max.toFixed(2) %>" step="0.01"/>
                                         </div>
                                     </div>
@@ -493,10 +493,10 @@
                             <div class="col-md-3 col-sm-3">
                                 <div class="marco_item">
                                     <div class="form-group">
-                                        <div class="col-md-6 item_ensayo">
+                                        <div class="col-md-6 col-xs-4 item_ensayo">
                                             <label for="humedad_max" class="control-label">Humedad Máxima:</label>
                                         </div>
-                                        <div class="col-md-6">
+                                        <div class="col-md-6 col-xs-8">
                                             <input type="number" class="form-control" id="humedad_max" name="vaso[humedad_max]" value="<%= vaso.humedad_max.toFixed(2) %>" step="0.01"/>
                                         </div>
                                     </div>
@@ -516,10 +516,10 @@
                             <div class="col-md-3 col-sm-3">
                                 <div class="marco_item">
                                     <div class="form-group">
-                                        <div class="col-md-6 item_ensayo">
+                                        <div class="col-md-6 col-xs-4 item_ensayo">
                                             <label for="co2_interior" class="control-label">CO2 Interior:</label>
                                         </div>
-                                        <div class="col-md-6">
+                                        <div class="col-md-6 col-xs-8">
                                             <input type="number" class="form-control" id="co2_interior" name="vaso[co2_interior]" value="<%= vaso.co2_interior.toFixed(2) %>" step="0.01"/>
                                         </div>
                                     </div>
@@ -539,10 +539,10 @@
                             <div class="col-md-3 col-sm-3">
                                 <div class="marco_item">
                                     <div class="form-group">
-                                        <div class="col-md-6 item_ensayo">
+                                        <div class="col-md-6 col-xs-4 item_ensayo">
                                             <label for="co2_exterior" class="control-label">CO2 Exterior:</label>
                                         </div>
-                                        <div class="col-md-6">
+                                        <div class="col-md-6 col-xs-8">
                                             <input type="number" class="form-control" id="co2_exterior" name="vaso[co2_exterior]" value="<%= vaso.co2_exterior.toFixed(2) %>" step="0.01"/>
                                         </div>
                                     </div>
@@ -563,10 +563,10 @@
                             <div class="col-md-3 col-sm-3">
                                 <div class="marco_item">
                                     <div class="form-group">
-                                        <div class="col-md-6 item_ensayo">
+                                        <div class="col-md-6 col-xs-4 item_ensayo">
                                             <label for="legionella_max" class=" control-label">Legionella Máximo:</label>
                                         </div>
-                                        <div class="col-md-6">
+                                        <div class="col-md-6 col-xs-8">
                                             <input type="number" class="form-control" id="legionella_max" name="vaso[legionella_max]" value="<%= vaso.legionella_max.toFixed(2) %>" step="0.01"/>
                                         </div>
                                     </div>
@@ -590,18 +590,18 @@
                             <div class="col-md-3 col-sm-3">
                                 <div class="marco_item">
                                     <div class="form-group">
-                                        <div class="col-md-6 item_ensayo">
+                                        <div class="col-md-6 col-xs-4 item_ensayo">
                                             <label for="langelier_max" class=" control-label">Langelier Máximo:</label>
                                         </div>
-                                        <div class="col-md-6">
+                                        <div class="col-md-6 col-xs-8">
                                             <input type="number" class="form-control" id="langelier_max" name="vaso[langelier_max]" value="<%= vaso.langelier_max.toFixed(2) %>" step="0.01"/>
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <div class="col-md-6 item_ensayo">
+                                        <div class="col-md-6 col-xs-4 item_ensayo">
                                             <label for="langelier_min" class=" control-label">Langelier Mínimo:</label>
                                         </div>
-                                        <div class="col-md-6">
+                                        <div class="col-md-6 col-xs-8">
                                             <input type="number" class="form-control" id="langelier_min" name="vaso[langelier_min]" value="<%= vaso.langelier_min.toFixed(2) %>" step="0.01"/>
                                         </div>
                                     </div>
