--- a/views/siloes/index.ejs
+++ b/views/siloes/index.ejs
@@ -43,7 +43,7 @@
 
 			<tbody>
 				<% for (var i in siloes) { %>
-
+					<a href="/siloes/<%= siloes[i].id %>">
 					<tr>
 						<td class="text-center"><a href="/siloes/<%= siloes[i].id %>"><%= siloes[i].dia %>-<%= siloes[i].mes %>-<%= siloes[i].anio %></a></td>
 						<td class="text-center"><a href="/siloes/<%= siloes[i].id %>"><%= siloes[i].id %></a></td>
@@ -69,7 +69,7 @@
 								</td>
 							<%}%>
 						<%}%>
-					</tr>
+					</tr></a>
 
 				<% } %>
 			</tbody>
