--- a/views/siloes/show.ejs
+++ b/views/siloes/show.ejs
@@ -9,7 +9,7 @@
 
 								<div class="container">
 									<% if ((session.user.isAdmin || (session.user && siloe.UserId === session.user.id))) {%>
-										
+
 										<h5><span class="badge">#<%=ensayos[index].id%></span></h5>
 										<h5>Vaso: <strong><%= ensayos[index].vasoId %> - <%= ensayos[index].nombre %></strong></h5>
 										<h5>Ubicación: <strong><%= ensayos[index].ubicacion %></strong></h5>
@@ -207,18 +207,18 @@
 																			<% if (ensayos[index].ph_ensayar) {%>
 																				<div class="marco_item">
 																					<div class="form-group">
-																						<div class="col-md-6 item_ensayo">
+																						<div class="col-md-6 col-xs-4 item_ensayo">
 																							<label for="ph" class="control-label">Ph m</label>
 																						</div>
-																						<div class="col-md-6">
+																						<div class="col-md-6 col-xs-8">
 																							<input type="number" class="form-control" id="ph_m" name="ensayo[ph_m]" value="<%= (ensayos[index].ph_m).toFixed(1) %>" step="0.1"/>
 																						</div>
 																					</div>
 																					<div class="form-group">
-																						<div class="col-md-6 item_ensayo">
+																						<div class="col-md-6 col-xs-4 item_ensayo">
 																							<label for="ph" class="control-label">Ph t</label>
 																						</div>
-																						<div class="col-md-6">
+																						<div class="col-md-6 col-xs-8">
 																							<input type="number" class="form-control" id="ph_t" name="ensayo[ph_t]" value="<%= (ensayos[index].ph_t).toFixed(1) %>" step="0.1"/>
 																						</div>
 																					</div>
@@ -237,18 +237,18 @@
 																			<% if (ensayos[index].temp_ensayar) {%>
 																				<div class="marco_item">
 																					<div class="form-group">
-																						<div class="col-md-6 item_ensayo">
+																						<div class="col-md-6 col-xs-4 item_ensayo">
 																							<label for="temp" class="control-label">Temp m</label>
 																						</div>
-																						<div class="col-md-6">
+																						<div class="col-md-6 col-xs-8">
 																							<input type="number" class="form-control" id="temp_m" name="ensayo[temp_m]" value="<%= (ensayos[index].temp_m).toFixed(1) %>" step="0.1"/>
 																						</div>
 																					</div>
 																					<div class="form-group">
-																						<div class="col-md-6 item_ensayo">
+																						<div class="col-md-6 col-xs-4 item_ensayo">
 																							<label for="temp" class="control-label">Temp t</label>
 																						</div>
-																						<div class="col-md-6">
+																						<div class="col-md-6 col-xs-8">
 																							<input type="number" class="form-control" id="temp_t" name="ensayo[temp_t]" value="<%= (ensayos[index].temp_t).toFixed(1) %>" step="0.1"/>
 																						</div>
 																					</div>
@@ -267,18 +267,18 @@
 																			<% if (ensayos[index].turbidez_ensayar) {%>
 																				<div class="marco_item">
 																					<div class="form-group">
-																						<div class="col-md-6 item_ensayo">
+																						<div class="col-md-6 col-xs-4 item_ensayo">
 																							<label for="turbidez" class="control-label">Turbidez m</label>
 																						</div>
-																						<div class="col-md-6">
+																						<div class="col-md-6 col-xs-8">
 																							<input type="number" class="form-control" id="turbidez_m" name="ensayo[turbidez_m]" value="<%= (ensayos[index].turbidez_m).toFixed(1) %>" step="0.1"/>
 																						</div>
 																					</div>
 																					<div class="form-group">
-																						<div class="col-md-6 item_ensayo">
+																						<div class="col-md-6 col-xs-4 item_ensayo">
 																							<label for="turbidez" class="control-label">Turbidez t</label>
 																						</div>
-																						<div class="col-md-6">
+																						<div class="col-md-6 col-xs-8">
 																							<input type="number" class="form-control" id="turbidez_t" name="ensayo[turbidez_t]" value="<%= (ensayos[index].turbidez_t).toFixed(1) %>" step="0.1"/>
 																						</div>
 																					</div>
@@ -297,18 +297,18 @@
 																			<% if (ensayos[index].recirculacion_ensayar) {%>
 																				<div class="marco_item">
 																					<div class="form-group">
-																						<div class="col-md-6 item_ensayo">
+																						<div class="col-md-6 col-xs-4 item_ensayo">
 																							<label for="recirculacion" class="control-label">Recirc m</label>
 																						</div>
-																						<div class="col-md-6">
+																						<div class="col-md-6 col-xs-8">
 																							<input type="number" class="form-control" id="recirculacion_m" name="ensayo[recirculacion_m]" value="<%= (ensayos[index].recirculacion_m).toFixed(1) %>" step="1"/>
 																						</div>
 																					</div>
 																					<div class="form-group">
-																						<div class="col-md-6 item_ensayo">
+																						<div class="col-md-6 col-xs-4 item_ensayo">
 																							<label for="recirculacion" class="control-label">Recirc t</label>
 																						</div>
-																						<div class="col-md-6">
+																						<div class="col-md-6 col-xs-8">
 																							<input type="number" class="form-control" id="recirculacion_t" name="ensayo[recirculacion_t]" value="<%= (ensayos[index].recirculacion_t).toFixed(1) %>" step="1"/>
 																						</div>
 																					</div>
@@ -330,18 +330,18 @@
 																			<% if (ensayos[index].redox_ensayar) {%>
 																				<div class="marco_item">
 																					<div class="form-group">
-																						<div class="col-md-6 item_ensayo">
+																						<div class="col-md-6 col-xs-4 item_ensayo">
 																							<label for="redox" class="control-label">Redox m</label>
 																						</div>
-																						<div class="col-md-6">
+																						<div class="col-md-6 col-xs-8">
 																							<input type="number" class="form-control" id="redox_m" name="ensayo[redox_m]" value="<%= (ensayos[index].redox_m).toFixed(1) %>" step="1"/>
 																						</div>
 																					</div>
 																					<div class="form-group">
-																						<div class="col-md-6 item_ensayo">
+																						<div class="col-md-6 col-xs-4 item_ensayo">
 																							<label for="redox" class="control-label">Redox t</label>
 																						</div>
-																						<div class="col-md-6">
+																						<div class="col-md-6 col-xs-8">
 																							<input type="number" class="form-control" id="redox_t" name="ensayo[redox_t]" value="<%= (ensayos[index].redox_t).toFixed(1) %>" step="1"/>
 																						</div>
 																					</div>
@@ -388,18 +388,18 @@
 																			<% if (ensayos[index].cloro_ensayar) {%>
 																				<div class="marco_item">
 																					<div class="form-group">
-																						<div class="col-md-6 item_ensayo">
+																						<div class="col-md-6 col-xs-4 item_ensayo">
 																							<label for="cloro" class="control-label">Cloro m</label>
 																						</div>
-																						<div class="col-md-6">
+																						<div class="col-md-6 col-xs-8">
 																							<input type="number" class="form-control" id="cloro_m" name="ensayo[cloro_m]" value="<%= (ensayos[index].cloro_m).toFixed(1) %>" step="0.1"/>
 																						</div>
 																					</div>
 																					<div class="form-group">
-																						<div class="col-md-6 item_ensayo">
+																						<div class="col-md-6 col-xs-4 item_ensayo">
 																							<label for="cloro" class="control-label">Cloro t</label>
 																						</div>
-																						<div class="col-md-6">
+																						<div class="col-md-6 col-xs-8">
 																							<input type="number" class="form-control" id="cloro_t" name="ensayo[cloro_t]" value="<%= (ensayos[index].cloro_t).toFixed(1) %>" step="0.1"/>
 																						</div>
 																					</div>
@@ -418,18 +418,18 @@
 																			<% if (ensayos[index].cloro_combinado_ensayar) {%>
 																				<div class="marco_item">
 																					<div class="form-group">
-																						<div class="col-md-6 item_ensayo">
+																						<div class="col-md-6 col-xs-4 item_ensayo">
 																							<label for="cloro_combinado" class="control-label">Cloro C m</label>
 																						</div>
-																						<div class="col-md-6">
+																						<div class="col-md-6 col-xs-8">
 																							<input type="number" class="form-control" id="cloro_combinado_m" name="ensayo[cloro_combinado_m]" value="<%= (ensayos[index].cloro_combinado_m).toFixed(1) %>" step="0.1"/>
 																						</div>
 																					</div>
 																					<div class="form-group">
-																						<div class="col-md-6 item_ensayo">
+																						<div class="col-md-6 col-xs-4 item_ensayo">
 																							<label for="cloro_combinado" class="control-label">Cloro C t</label>
 																						</div>
-																						<div class="col-md-6">
+																						<div class="col-md-6 col-xs-8">
 																							<input type="number" class="form-control" id="cloro_combinado_t" name="ensayo[cloro_combinado_t]" value="<%= (ensayos[index].cloro_combinado_t).toFixed(1) %>" step="0.1"/>
 																						</div>
 																					</div>
@@ -448,18 +448,18 @@
 																			<% if (ensayos[index].bromo_ensayar) {%>
 																				<div class="marco_item">
 																					<div class="form-group">
-																						<div class="col-md-6 item_ensayo">
+																						<div class="col-md-6 col-xs-4 item_ensayo">
 																							<label for="bromo" class="control-label">Bromo m</label>
 																						</div>
-																						<div class="col-md-6">
+																						<div class="col-md-6 col-xs-8">
 																							<input type="number" class="form-control" id="bromo_m" name="ensayo[bromo_m]" value="<%= (ensayos[index].bromo_m).toFixed(1) %>" step="0.1"/>
 																						</div>
 																					</div>
 																					<div class="form-group">
-																						<div class="col-md-6 item_ensayo">
+																						<div class="col-md-6 col-xs-4 item_ensayo">
 																							<label for="bromo" class="control-label">Bromo t</label>
 																						</div>
-																						<div class="col-md-6">
+																						<div class="col-md-6 col-xs-8">
 																							<input type="number" class="form-control" id="bromo_t" name="ensayo[bromo_t]" value="<%= (ensayos[index].bromo_t).toFixed(1) %>" step="0.1"/>
 																						</div>
 																					</div>
@@ -478,18 +478,18 @@
 																			<% if (ensayos[index].isocianuro_ensayar) {%>
 																				<div class="marco_item">
 																					<div class="form-group">
-																						<div class="col-md-6 item_ensayo">
+																						<div class="col-md-6 col-xs-4 item_ensayo">
 																							<label for="isocianuro" class="control-label">Isocianuro m</label>
 																						</div>
-																						<div class="col-md-6">
+																						<div class="col-md-6 col-xs-8">
 																							<input type="number" class="form-control" id="isocianuro_m" name="ensayo[isocianuro_m]" value="<%= (ensayos[index].isocianuro_m).toFixed(1) %>" step="0.1"/>
 																						</div>
 																					</div>
 																					<div class="form-group">
-																						<div class="col-md-6 item_ensayo">
+																						<div class="col-md-6 col-xs-4 item_ensayo">
 																							<label for="isocianuro" class="control-label">Isocianuro t</label>
 																						</div>
-																						<div class="col-md-6">
+																						<div class="col-md-6 col-xs-8">
 																							<input type="number" class="form-control" id="isocianuro_t" name="ensayo[isocianuro_t]" value="<%= (ensayos[index].isocianuro_t).toFixed(1) %>" step="0.1"/>
 																						</div>
 																					</div>
@@ -535,18 +535,18 @@
 																			<% if (ensayos[index].humedad_ensayar) {%>
 																				<div class="marco_item">
 																					<div class="form-group">
-																						<div class="col-md-6 item_ensayo">
+																						<div class="col-md-6 col-xs-4 item_ensayo">
 																							<label for="humedad" class="control-label">Humedad m</label>
 																						</div>
-																						<div class="col-md-6">
+																						<div class="col-md-6 col-xs-8">
 																							<input type="number" class="form-control" id="humedad_m" name="ensayo[humedad_m]" value="<%= (ensayos[index].humedad_m).toFixed(1) %>" step="0.1"/>
 																						</div>
 																					</div>
 																					<div class="form-group">
-																						<div class="col-md-6 item_ensayo">
+																						<div class="col-md-6 col-xs-4 item_ensayo">
 																							<label for="humedad" class="control-label">Humedad t</label>
 																						</div>
-																						<div class="col-md-6">
+																						<div class="col-md-6 col-xs-8">
 																							<input type="number" class="form-control" id="humedad_t" name="ensayo[humedad_t]" value="<%= (ensayos[index].humedad_t).toFixed(1) %>" step="0.1"/>
 																						</div>
 																					</div>
@@ -565,18 +565,18 @@
 																			<% if (ensayos[index].co2_interior_ensayar) {%>
 																				<div class="marco_item">
 																					<div class="form-group">
-																						<div class="col-md-6 item_ensayo">
+																						<div class="col-md-6 col-xs-4 item_ensayo">
 																							<label for="co2_interior" class="control-label">CO2 Int m</label>
 																						</div>
-																						<div class="col-md-6">
+																						<div class="col-md-6 col-xs-8">
 																							<input type="number" class="form-control" id="co2_interior_m" name="ensayo[co2_interior_m]" value="<%= (ensayos[index].co2_interior_m).toFixed(1) %>" step="0.1"/>
 																						</div>
 																					</div>
 																					<div class="form-group">
-																						<div class="col-md-6 item_ensayo">
+																						<div class="col-md-6 col-xs-4 item_ensayo">
 																							<label for="co2_interior" class="control-label">CO2 Int t</label>
 																						</div>
-																						<div class="col-md-6">
+																						<div class="col-md-6 col-xs-8">
 																							<input type="number" class="form-control" id="co2_interior_t" name="ensayo[co2_interior_t]" value="<%= (ensayos[index].co2_interior_t).toFixed(1) %>" step="0.1"/>
 																						</div>
 																					</div>
@@ -595,18 +595,18 @@
 																			<% if (ensayos[index].co2_exterior_ensayar) {%>
 																				<div class="marco_item">
 																					<div class="form-group">
-																						<div class="col-md-6 item_ensayo">
+																						<div class="col-md-6 col-xs-4 item_ensayo">
 																							<label for="co2_exterior" class="control-label">CO2 Ext m</label>
 																						</div>
-																						<div class="col-md-6">
+																						<div class="col-md-6 col-xs-8">
 																							<input type="number" class="form-control" id="co2_exterior_m" name="ensayo[co2_exterior_m]" value="<%= (ensayos[index].co2_exterior_m).toFixed(1) %>" step="0.1"/>
 																						</div>
 																					</div>
 																					<div class="form-group">
-																						<div class="col-md-6 item_ensayo">
+																						<div class="col-md-6 col-xs-4 item_ensayo">
 																							<label for="co2_exterior" class="control-label">CO2 Ext t</label>
 																						</div>
-																						<div class="col-md-6">
+																						<div class="col-md-6 col-xs-8">
 																							<input type="number" class="form-control" id="co2_exterior_t" name="ensayo[co2_exterior_t]" value="<%= (ensayos[index].co2_exterior_t).toFixed(1) %>" step="0.1"/>
 																						</div>
 																					</div>
@@ -625,18 +625,18 @@
 																			<% if (ensayos[index].legionella_ensayar) {%>
 																				<div class="marco_item">
 																					<div class="form-group">
-																						<div class="col-md-6 item_ensayo">
+																						<div class="col-md-6 col-xs-4 item_ensayo">
 																							<label for="legionella" class="control-label">Legionella m</label>
 																						</div>
-																						<div class="col-md-6">
+																						<div class="col-md-6 col-xs-8">
 																							<input type="number" class="form-control" id="legionella_m" name="ensayo[legionella_m]" value="<%= (ensayos[index].legionella_m).toFixed(1) %>" step="0.1"/>
 																						</div>
 																					</div>
 																					<div class="form-group">
-																						<div class="col-md-6 item_ensayo">
+																						<div class="col-md-6 col-xs-4 item_ensayo">
 																							<label for="legionella" class="control-label">Legionella t</label>
 																						</div>
-																						<div class="col-md-6">
+																						<div class="col-md-6 col-xs-8">
 																							<input type="number" class="form-control" id="legionella_t" name="ensayo[legionella_t]" value="<%= (ensayos[index].legionella_t).toFixed(1) %>" step="0.1"/>
 																						</div>
 																					</div>
@@ -659,18 +659,18 @@
 																			<% if (ensayos[index].langelier_ensayar) {%>
 																				<div class="marco_item">
 																					<div class="form-group">
-																						<div class="col-md-6 item_ensayo">
+																						<div class="col-md-6 col-xs-4 item_ensayo">
 																							<label for="langelier" class="control-label">Langelier m</label>
 																						</div>
-																						<div class="col-md-6">
+																						<div class="col-md-6 col-xs-8">
 																							<input type="number" class="form-control" id="langelier_m" name="ensayo[langelier_m]" value="<%= (ensayos[index].langelier_m).toFixed(1) %>" step="0.1"/>
 																						</div>
 																					</div>
 																					<div class="form-group">
-																						<div class="col-md-6 item_ensayo">
+																						<div class="col-md-6 col-xs-4 item_ensayo">
 																							<label for="langelier" class="control-label">Langelier t</label>
 																						</div>
-																						<div class="col-md-6">
+																						<div class="col-md-6 col-xs-8">
 																							<input type="number" class="form-control" id="langelier_t" name="ensayo[langelier_t]" value="<%= (ensayos[index].langelier_t).toFixed(1) %>" step="0.1"/>
 																						</div>
 																					</div>
