fijar mes seleccionado

--- a/views/contadores/index.ejs
+++ b/views/contadores/index.ejs
@@ -64,7 +64,7 @@
 
         		<ul class="tira_botones">
         			<li><a class="btn btn_gral" href="/contadores/new">
-        				Crear Contador
+        				➕ Crear Contador
         			</a></li>
         		</ul>
 
