--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -109,12 +109,12 @@
 
 
 					<li><a class="btn btn_gral" href="/quizes/new">
-						Crear Parte
+						➕ Crear Parte
 					</a></li>
 
 
 					<li><a class="btn btn_gral" href="/quizes/mes_index">
-						Selecionar mes
+						<i class="fa fa-calendar" alt=""></i> Selecionar mes
 					</a></li>
 
 				</ul>
