--- a/views/siloes/index.ejs
+++ b/views/siloes/index.ejs
@@ -94,12 +94,12 @@
 
 
 			<li><a class="btn btn_gral" href="/siloes/new">
-				Crear Parte
+				➕ Crear Parte
 			</a></li>
 
 
 			<li><a class="btn btn_gral" href="/siloes/mes_index">
-				Selecionar mes
+				<i class="fa fa-calendar" alt=""></i> Selecionar mes
 			</a></li>
 
 		</ul>
