--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -57,7 +57,7 @@
                 <ul class="tira_botones">
 
 					<li><a class="btn btn_gral" href="/user/new">
-						Crear Usuario
+					    ➕ Crear Usuario
 					</a></li>
 
 				</ul>
