--- a/views/user/_form.ejs
+++ b/views/user/_form.ejs
@@ -61,15 +61,19 @@
 <!--			<input type="text" class="form-control hidden" id="isAdmin" name="user[isAdmin]" value="<%= user.isAdmin %>"/> -->
 		<%}%>
 
-		<div class="form-group text-center">
-			<ul class="tira_botones">
-				<li><a class="btn btn_gral btn_cancelar" href="/user">
-					Cancelar
-				</a></li>
-				<li><button class="btn btn_gral" type="submit" id="grabar" value="Salvar">
-					Grabar
-				</button></li>
-			</ul>
-		</div>
 
+
+	</div>
+
+	<br><br>
+
+	<div class="form-group text-center">
+		<ul class="tira_botones">
+			<li><a class="btn btn_gral btn_cancelar" href="/user">
+				<span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancelar
+			</a></li>
+			<li><button class="btn btn_gral" type="submit" id="grabar" value="Salvar">
+				<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Grabar
+			</button></li>
+		</ul>
 	</div>
