--- a/views/vasos/index.ejs
+++ b/views/vasos/index.ejs
@@ -65,7 +65,7 @@
                 <ul class="tira_botones">
 
 					<li><a class="btn btn_gral" href="/vasos/new">
-						Crear Vaso
+						➕ Crear Vaso
 					</a></li>
 
 				</ul>
