--- a/public/stylesheets/movil.css
+++ b/public/stylesheets/movil.css
@@ -21,6 +21,12 @@
 
     }
 
+    .ocultar_movil {
+
+        visibility: hidden;
+        
+    }
+
 
     /* INICIO =============================================================== */
 
@@ -226,7 +232,9 @@
 
 
 
-
+    /* ============================================================  */
+    /* ======= pie_footer =========================================  */
+    /* ============================================================  */
 
 
 
