--- a/views/contadores/edit.ejs
+++ b/views/contadores/edit.ejs
@@ -1,7 +1,7 @@
 
     <div class="container margen_superior" id="new-edit">
 
-    	<h4>Modificar contador</h4>
+    	<h4>Editar: </h4>
 
     	<form class="form-horizontal"
     			method="post"
