--- a/views/quizes/_form.ejs
+++ b/views/quizes/_form.ejs
@@ -1,7 +1,7 @@
 
 <div class="container" id="parte_form">
 
-	<h4><img src="/images/partes3.png" alt=""> Parte</h4>
+	<h4><img src="/images/partes3.png" alt=""> Parte de Lecturas</h4>
 	<br>
 
 
