--- a/views/quizes/imprimir_lecturas.ejs
+++ b/views/quizes/imprimir_lecturas.ejs
@@ -51,6 +51,20 @@
 
         <%}%>
 
+
+
+        <li><a href="/quizes/chart_consumos"> Chart </a></li>
+
+
+        <br>
+
+
+
+
+
+
+
+
         <script type="text/javascript">
 
             window.print();
