--- a/views/quizes/new.ejs
+++ b/views/quizes/new.ejs
@@ -1,7 +1,7 @@
 
 <div class="container margen_superior" id="new-edit">
 
-	<h4>Añadir parte:</h4>
+	<h4>Añadir:</h4>
 
 	<form class="form-horizontal"
 			method="post"
