--- a/views/siloes/_form.ejs
+++ b/views/siloes/_form.ejs
@@ -1,7 +1,7 @@
 
 <div class="container" id="siloe_form">
 
-	<h4><img src="/images/siloes.png" alt=""> Parte</h4>
+	<h4><img src="/images/probetas.png" alt=""> Parte de Ensayos</h4>
 	<br>
 
 
