--- a/views/user/new.ejs
+++ b/views/user/new.ejs
@@ -1,6 +1,6 @@
 
 <div class="container margen_superior" id="new-edit">
-	<h4>Crear usuario:</h4>
+	<h4>Añadir: </h4>
 	<form class="form-horizontal"
 			method="post"
 			action="/user/create">
