--- a/views/vasos/new.ejs
+++ b/views/vasos/new.ejs
@@ -1,7 +1,7 @@
 
     <div class="container margen_superior" id="new-edit">
 
-    	<h4>Nuevo vaso</h4>
+    	<h4>Añadir: </h4>
 
     	<form class="form-horizontal"
     			method="post"
