--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,18 +14,7 @@
 	</div>
 
 
-
-
-<!--	<div class="animated fadeIn" id="wrap">
-		<img class="bgfade responsive" src="/images/inicio/01.jpg">
-		<img class="bgfade responsive" src="/images/inicio/02.jpg">
-		<img class="bgfade responsive" src="/images/inicio/03.jpg">
-		<img class="bgfade responsive" src="/images/inicio/04.jpg">
-		<img class="bgfade responsive" src="/images/inicio/05.jpg">
-		<img class="bgfade responsive" src="/images/inicio/06.jpg">
-	</div> -->
-
-	<div class="container-fluid bordes text-center animated fadeIn" id="inicio">
+	<div class="container-fluid bordes animated fadeIn" id="inicio">
 
 <!--		<img src="/images/inicio/09.jpg" > -->
 
@@ -123,7 +112,7 @@
 
 	<!-- SECCION 02 =================================================================================== -->
 
-	<div class="container-fluid" id="seccion_02">
+	<!-- <div class="container-fluid" id="seccion_02">
 
 
 
@@ -169,12 +158,12 @@
 
 		</div>
 
-	</div>
+	</div> -->
 
 
 	<!-- PIE BANNER =================================================================================== -->
 
-	<div class="container-fluid" id="pie_banner">
+	<!-- <div class="container-fluid" id="pie_banner">
 
 		<div class="container" id="pie_banner_contenedor">
 
@@ -182,7 +171,7 @@
 
 			<div class="row">
 
-				<div class="col-md-3">
+				<div class="col-md-3" style="background-color:#2E2E2E">
 
 					<table>
 
@@ -327,7 +316,7 @@
 
 		</div>
 
-	</div>
+	</div> -->
 
 
 
