--- a/public/stylesheets/movil.css
+++ b/public/stylesheets/movil.css
@@ -24,7 +24,7 @@
     .ocultar_movil {
 
         visibility: hidden;
-        
+
     }
 
 
@@ -32,7 +32,7 @@
 
     #inicio {
 
-        min-height: 310px;
+        min-height: 360px;
 
     }
 
@@ -104,6 +104,39 @@
 		padding: 10px;
 
 	}
+
+    .menu-inicio-item:nth-child(1) {
+        border-bottom: 1px solid #424242;
+    }
+    .menu-inicio-item:nth-child(2) {
+        border-bottom: 1px solid #424242;
+    }
+    .menu-inicio-item:nth-child(3) {
+        border-bottom: 1px solid #424242;
+    }
+    .menu-inicio-item:nth-child(4) {
+        border-bottom: 1px solid #424242;
+    }
+    .menu-inicio-item:nth-child(5) {
+        border-bottom: 1px solid #424242;
+    }
+    .menu-inicio-item:nth-child(6) {
+        border-bottom: 1px solid #424242;
+    }
+    .menu-inicio-item:nth-child(7) {
+        border-bottom: 1px solid #424242;
+    }
+    .menu-inicio-item:nth-child(8) {
+        border-bottom: 1px solid #424242;
+    }
+
+    .dropdown-menu-item {
+        border-bottom: none;
+    }
+
+    .dropdown-menu-item img {
+        transform: scale(0.8);
+    }
 
 
 
